--- a/Demo/FrontEnd/src/app/books/home/home.component.css
+++ b/Demo/FrontEnd/src/app/books/home/home.component.css
@@ -24,3 +24,11 @@
 .btn-success{
     background-color: #65B741;
 }
+
+.label-status{
+    background-color: #ADD899;
+    text-align: center;
+    color:black;
+    width: 100px;
+    border-radius: 50px 20px;
+}
