--- a/Demo/FrontEnd/src/app/books/home/home.component.html
+++ b/Demo/FrontEnd/src/app/books/home/home.component.html
@@ -4,15 +4,18 @@
     <mat-card-title-group>
       <mat-card-title>{{ livro.titulo }}</mat-card-title>
       <mat-card-subtitle>{{ livro.autor }}</mat-card-subtitle>
+      <mat-card-subtitle class="label-status">Disponível</mat-card-subtitle>
+
       <img class="book-cover" mat-card-md-image src="{{ livro.capa }}" >
     </mat-card-title-group>
     
     <mat-card-content>
-      {{ livro.lancamento.toString() }}
+      <!-- {{ livro.lancamento.toString() }} -->
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-button class="btn-warn" [routerLink]="['/edit', livro.id]">Atualizar</button>
+      <button mat-button class="btn-warn" [routerLink]="['/edit', livro.id]">Emprestar</button>
+      <button mat-button class="btn-success" [routerLink]="['/edit', livro.id]">Devolver</button>
     </mat-card-actions>
 
 </mat-card>
