--- a/Demo/FrontEnd/src/app/books/edit-books/edit-books.component.html
+++ b/Demo/FrontEnd/src/app/books/edit-books/edit-books.component.html
@@ -37,19 +37,24 @@
 
     <mat-form-field class="form-input" appearance="legacy">
       <mat-label>Data lançamento</mat-label>
+      
       <input 
-        name="lancamento"
-        formControlName="inputLancamento"
-        required
         matInput 
-        placeholder="">
-    </mat-form-field>
+        [matDatepicker]="picker" 
+        formControlName="inputLancamento"
+        (click)="picker.open()">
+      
+        <mat-datepicker-toggle matSuffix [for]="picker" style="background-color:#ec0101e6;"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field> 
 
-    <button type="submit" class="btn-save" mat-button color="primary">Save</button>
+    <button type="submit" class="btn-save" mat-button>Salvar</button>
 
-    <button (click)="apagarLivro()" mat-button class="btn-delete">Apagar</button>
+    <button type="button" (click)="apagarLivro()" mat-button class="btn-delete">Apagar</button>
+
+    <button type="button" routerLink="/home" mat-button class="btn-voltar">Voltar</button>
     
-    </form>
+  </form>
   </div>
 
   <div class="cover-container">
