--- a/Demo/FrontEnd/src/app/books/loan-modal/loan-modal.component.css
+++ b/Demo/FrontEnd/src/app/books/loan-modal/loan-modal.component.css
@@ -1,27 +1,3 @@
-form{
-    width: 50%;
-    margin: auto;
-    align-content: center;
-}
-
-h4{
-    font-size: 3rem;
-    display: table;
-    margin: 10% auto 3% auto;
-    color: #c2185b;
-}
-
-.form-container{
-    display: inline;
-    width: 70%;
-    margin: 0;
-}
-
-.form-input{
-    display: inline;
-    margin: 5px;
-}
-
 .btn-save{
     display: block;
     background-color: #047b22e6;
@@ -44,4 +20,8 @@ h4{
     color: #eee9e9;
     width: 100px;
     margin: 10px auto auto auto;
+}
+
+.modal-form{
+    display: grid;
 }
